@@ -160,9 +160,11 @@
             "Dist::Zilla::Plugin::Git::CheckFor::MergeConflicts" : "0",
             "Dist::Zilla::Plugin::Git::Commit" : "0",
             "Dist::Zilla::Plugin::Git::Contributors" : "0",
+            "Dist::Zilla::Plugin::Git::FilePermissions" : "0",
             "Dist::Zilla::Plugin::Git::GatherDir" : "2.016",
             "Dist::Zilla::Plugin::Git::Push" : "0",
             "Dist::Zilla::Plugin::Git::Remote::Check" : "0",
+            "Dist::Zilla::Plugin::Git::RequireUnixEOL" : "0",
             "Dist::Zilla::Plugin::Git::Tag" : "0",
             "Dist::Zilla::Plugin::GithubMeta" : "0",
             "Dist::Zilla::Plugin::InstallGuide" : "1.200007",
@@ -268,9 +270,11 @@
          "Dist::Zilla::Plugin::Git::CheckFor::MergeConflicts" : "0.014",
          "Dist::Zilla::Plugin::Git::Commit" : "2.042",
          "Dist::Zilla::Plugin::Git::Contributors" : "0.030",
+         "Dist::Zilla::Plugin::Git::FilePermissions" : "0.002",
          "Dist::Zilla::Plugin::Git::GatherDir" : "2.042",
          "Dist::Zilla::Plugin::Git::Push" : "2.042",
          "Dist::Zilla::Plugin::Git::Remote::Check" : "0.1.2",
+         "Dist::Zilla::Plugin::Git::RequireUnixEOL" : "0.001",
          "Dist::Zilla::Plugin::Git::Tag" : "2.042",
          "Dist::Zilla::Plugin::GithubMeta" : "0.54",
          "Dist::Zilla::Plugin::InstallGuide" : "1.200007",
@@ -404,7 +408,7 @@
          "Test::Kwalitee" : "1.26",
          "Test::MinimumVersion" : "0.101082",
          "Test::Mojibake" : "1.3",
-         "Test::More" : "1.302101",
+         "Test::More" : "1.302103",
          "Test::NoTabs" : "2.00",
          "Test::Perl::Critic" : "1.03",
          "Test::Pod" : "1.51",
@@ -540,12 +544,22 @@
          {
             "class" : "Dist::Zilla::Plugin::Author::SKIRMESS::RepositoryBase",
             "name" : "@Author::SKIRMESS/Author::SKIRMESS::RepositoryBase",
-            "version" : "0.025"
+            "version" : "0.026"
          },
          {
             "class" : "Dist::Zilla::Plugin::Author::SKIRMESS::InsertVersion",
             "name" : "@Author::SKIRMESS/Author::SKIRMESS::InsertVersion",
-            "version" : "0.025"
+            "version" : "0.026"
+         },
+         {
+            "class" : "Dist::Zilla::Plugin::Git::FilePermissions",
+            "name" : "@Author::SKIRMESS/Git::FilePermissions",
+            "version" : "0.002"
+         },
+         {
+            "class" : "Dist::Zilla::Plugin::Git::RequireUnixEOL",
+            "name" : "@Author::SKIRMESS/Git::RequireUnixEOL",
+            "version" : "0.001"
          },
          {
             "class" : "Dist::Zilla::Plugin::NextRelease",
