@@ -41,9 +41,11 @@ my %WriteMakefileArgs = (
     "Dist::Zilla::Plugin::Git::CheckFor::MergeConflicts" => 0,
     "Dist::Zilla::Plugin::Git::Commit" => 0,
     "Dist::Zilla::Plugin::Git::Contributors" => 0,
+    "Dist::Zilla::Plugin::Git::FilePermissions" => 0,
     "Dist::Zilla::Plugin::Git::GatherDir" => "2.016",
     "Dist::Zilla::Plugin::Git::Push" => 0,
     "Dist::Zilla::Plugin::Git::Remote::Check" => 0,
+    "Dist::Zilla::Plugin::Git::RequireUnixEOL" => 0,
     "Dist::Zilla::Plugin::Git::Tag" => 0,
     "Dist::Zilla::Plugin::GithubMeta" => 0,
     "Dist::Zilla::Plugin::InstallGuide" => "1.200007",
@@ -122,9 +124,11 @@ my %FallbackPrereqs = (
   "Dist::Zilla::Plugin::Git::CheckFor::MergeConflicts" => 0,
   "Dist::Zilla::Plugin::Git::Commit" => 0,
   "Dist::Zilla::Plugin::Git::Contributors" => 0,
+  "Dist::Zilla::Plugin::Git::FilePermissions" => 0,
   "Dist::Zilla::Plugin::Git::GatherDir" => "2.016",
   "Dist::Zilla::Plugin::Git::Push" => 0,
   "Dist::Zilla::Plugin::Git::Remote::Check" => 0,
+  "Dist::Zilla::Plugin::Git::RequireUnixEOL" => 0,
   "Dist::Zilla::Plugin::Git::Tag" => 0,
   "Dist::Zilla::Plugin::GithubMeta" => 0,
   "Dist::Zilla::Plugin::InstallGuide" => "1.200007",
