@@ -15,6 +15,7 @@ Author::SKIRMESS::RepositoryBase.stopwords[SKIRMESS]        = SKIRMESS
 Author::SKIRMESS::RepositoryBase.stopwords[travis]          = travis
 Author::SKIRMESS::RepositoryBase.stopwords[TravisCI]        = TravisCI
 Author::SKIRMESS::RepositoryBase.travis_ci_ignore_perl[5.8] = 5.8
+Git::FilePermissions.perms[maint]                           = ^maint/ 0755
 
 [Prereqs::Plugins]
 phase = runtime
