@@ -1,5 +1,7 @@
 [-Documentation::RequirePodAtEnd]
 
+[-ValuesAndExpressions::ProhibitMagicNumbers]
+
 [-ValuesAndExpressions::RequireConstantVersion]
 
 [-Variables::ProhibitLocalVars]
